--- a/Programing-m.html
+++ b/Programing-m.html
@@ -10,9 +10,9 @@
     
     <marquee behavior="scroll" direction="left">Programming is the process of creating instructions that computers can follow to perform specific tasks. It involves writing code using programming languages such as Python, Java, or C++. Through programming, developers can build software applications, websites, games, and even control hardware. It requires problem-solving skills, logical thinking, and attention to detail to write efficient and error-free code. Programming is a key part of modern technology and plays a vital role in shaping the digital world we live in today.</marquee>
 
-    <p style="font-size: 55px; color: yellow; "><b>Let's learn Programing</b></p>
+    <p style="font-size: 55px; color: yellow; text-shadow: 5px 5px 1px rgba(255, 255, 255, 0.74); "><b>Let's learn Programing</b></p>
     <p style="font-size: 30px; color: rgb(243, 243, 209); ">With S A Rafi</p>
-    <button style="margin-left: 500px; border: none; border-radius: 50px;"> <marquee behavior="scroll" direction="right" style="color:rgb(23, 6, 173);"><b>a:/c<->w+k=a2-w+k=a<-!2#v#n%h$a:/c<->w+k=a2-w+k=a<-!2#v#n%h$a:/c<->w+k=a2-w+k=a<-!2#v#n%h$  </b></marquee></button>
+    
     <p style="font-size: x-large; color: white; font-style: italic;">
         Software progrsamming is the process of writing instructions that  
         a computer can understand and execute. <br>
