--- a/form-2.html
+++ b/form-2.html
@@ -19,9 +19,10 @@
         .form-1{
             padding: 20px;
             background-color: bisque;
+            box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
         }
         legend{
-            
+            text-align: center;
         }
 
         
