--- a/My frame.html
+++ b/My frame.html
@@ -21,6 +21,7 @@
         }
         button:hover{
             background-color: rgb(6, 6, 184);
+            transform: scale(1.1);
         }
         button:active{
             background-color: rgb(251, 251, 142);
